--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-tmp
-test/support/Gemfile.lock
-.rvmrc
+.vagrant
+Berksfile.lock
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+/cookbooks
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
+.kitchen/
+.kitchen.local.yml
